syntax = "proto3";

package clipboard_service;

option go_package = "github.com/1939323749/clipboard_server/clipboard_service";

service ClipboardService {
  rpc CreateClipboards (CreateClipboardsRequest) returns (CreateClipboardsResponse) {}
  rpc GetClipboards (GetClipboardsRequest) returns (GetClipboardsResponse) {}
  rpc SubscribeClipboard (SubscribeClipboardRequest) returns (stream ClipboardMessage) {}
  rpc DeleteClipboards (DeleteClipboardsRequest) returns (DeleteClipboardsResponse) {}
}

message CreateClipboardsRequest {
  repeated string values = 1;
}

message CreateClipboardsResponse {
  repeated string ids = 1;
}

message GetClipboardsRequest {
  repeated string ids = 1;
}

message GetClipboardsResponse {
  repeated ClipboardItem clipboards = 1;
}

message DeleteClipboardsRequest {
  repeated string ids = 1;
}

message DeleteClipboardsResponse {
  bool success = 1;
}

message SubscribeClipboardRequest {}

message ClipboardMessage {
  repeated ClipboardItem items= 1;
  string operation = 2;
}

message ClipboardItem {
  string id = 1;
  string content = 2;
}